--- a/index.html
+++ b/index.html
@@ -8,80 +8,80 @@
   <body>
     <header></header>
     <main>
-      <h1>
-        <strong>საქართველოს ღირშესანიშნაობები რეგიონების მიხედვით</strong>
-      </h1>
+      <h1>საქართველოს ღირშესანიშნაობები რეგიონების მიხედვით</h1>
       <p>
         ქვემოთ მოცემულია საქართველოს მთავარი ღირშესანიშნაობები რეგიონების
         მიხედვით, მათი მდებარეობა და მოკლე აღწერა.
       </p>
 
       <table border="1" cellspacing="1" cellpadding="8">
-  <thead>
-    <tr>
-      <th rowspan="2">რეგიონი</th>
-      <th rowspan="2">ღიშესანიშნაობა</th>
-      <th colspan="2">მდებარეობა</th>
-    </tr>
-    <tr>
-      <th>მდებარეობა</th>
-      <th>ვიზიტის საუკეთესო დრო</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th rowspan="2">კახეთი</th>
-      <td>ალავერდი</td>
-      <td>ახმეტის მუნიციპალიტეტი</td>
-      <td>გაზაფხულ-შემოდგომა</td>
-    </tr>
-    <tr>
-      <td>დავით გარეჯი</td>
-      <td>საგარეჯოს მუნიციპალიტეტი</td>
-      <td>გაზაფხული</td>
-    </tr>
-    <tr>
-      <th rowspan="2">იმერეთი</th>
-      <td>გელათი</td>
-      <td>ქუთაისთან ახლოს</td>
-      <td>ნებისმიერი დროის</td>
-    </tr>
-    <tr>
-      <td>პრომეთეს მღვიმე</td>
-      <td>წალენჯიხის მუნიციპალიტეტი</td>
-      <td>ზაფხული</td>
-    </tr>
-    <tr>
-      <th rowspan="2">სამცხე-ჯავახეთი</th>
-      <td>ვარძია</td>
-      <td>ასპინძის მუნიციპალიტეტი</td>
-      <td>გაზაფხულ-შემოდგომა</td>
-    </tr>
-    <tr>
-      <td>რაბათი</td>
-      <td>ახალციხე</td>
-      <td>ზაფხული</td>
-    </tr>
-  </tbody>
-  <tfoot>
-    <tr>
-      <td colspan="4">
-      ▶დამატებითი ინფორმაცია
-      </td>
-    </tr>
-  </tfoot>
-</table>
+        <caption>ღირშესანიშნაობების გზამკვლევი</caption>
+        <thead>
+          <tr>
+            <th rowspan="2">რეგიონი</th>
+            <th rowspan="2">ღიშესანიშნაობა</th>
+            <th colspan="2">მდებარეობა</th>
+          </tr>
+          <tr>
+            <th>მდებარეობა</th>
+            <th>ვიზიტის საუკეთესო დრო</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th rowspan="2">კახეთი</th>
+            <td>ალავერდი</td>
+            <td>ახმეტის მუნიციპალიტეტი</td>
+            <td>გაზაფხულ-შემოდგომა</td>
+          </tr>
+          <tr>
+            <td>დავით გარეჯი</td>
+            <td>საგარეჯოს მუნიციპალიტეტი</td>
+            <td>გაზაფხული</td>
+          </tr>
+          <tr>
+            <th rowspan="2">იმერეთი</th>
+            <td>გელათი</td>
+            <td>ქუთაისთან ახლოს</td>
+            <td>ნებისმიერი დროის</td>
+          </tr>
+          <tr>
+            <td>პრომეთეს მღვიმე</td>
+            <td>წალენჯიხის მუნიციპალიტეტი</td>
+            <td>ზაფხული</td>
+          </tr>
+          <tr>
+            <th rowspan="2">სამცხე-ჯავახეთი</th>
+            <td>ვარძია</td>
+            <td>ასპინძის მუნიციპალიტეტი</td>
+            <td>გაზაფხულ-შემოდგომა</td>
+          </tr>
+          <tr>
+            <td>რაბათი</td>
+            <td>ახალციხე</td>
+            <td>ზაფხული</td>
+          </tr>
+        </tbody>
+        <tfoot>
+          <tr>
+            <td colspan="4">▶დამატებითი ინფორმაცია</td>
+          </tr>
+        </tfoot>
+      </table>
 
-<div>
-      <h2>სასარგებლო ბმულები:</h2>
-      <ul>
-        <li><a href="#">ტურების დაჯავშნა</a></li>
-        <li><a href="#">სამოგზაურო რჩევები</a></li>
-        <li><a href="#">ფოტო გალერეა</a></li>
-      </ul>
-      <p>ინფორმაცია განახლებულია: 19 თებერვალი, 2024</p>
-      <i>დამატებითი კითხვებისთვის: <a href="mailto:info@example.ge">info@example.ge</a></i>
-    </div>
+      <div>
+        <h2>სასარგებლო ბმულები:</h2>
+        <ul>
+          <li><a href="#">ტურების დაჯავშნა</a></li>
+          <li><a href="#">სამოგზაურო რჩევები</a></li>
+          <li><a href="#">ფოტო გალერეა</a></li>
+        </ul>
+        <p>ინფორმაცია განახლებულია: 19 თებერვალი, 2024</p>
+        <i
+          >დამატებითი კითხვებისთვის:
+          <a href="mailto:info@example.ge">info@example.ge</a></i
+        >
+      </div>
     </main>
     <aside></aside>
     <footer></footer>
